changes to index

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
       <section>
         <div id="title">
-          <h1>SubinMaharjan.GitHub.io</h1>
+          <h1>Subin Maharjan</h1>
           <p></p>
           <hr>
           <span class="credits left">Project maintained by <a href="https://github.com/subincha">subincha</a></span>
